--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="UTF-8">
-    <title>Happy Birthday Mihir</title>
+    <title>Happy Birthday Rakshi Mausi!</title>
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
     <link href="https://fonts.googleapis.com/css2?family=Kalam:wght@700&display=swap" rel="stylesheet">
@@ -22,8 +22,8 @@
             font-size: 3em;
         }
 
-        #mihir {
-            width: 450px;
+        #rakhi {
+            width: 300px;
             height: 450px;
             position: static;
             border: solid rebeccapurple;
@@ -48,16 +48,16 @@
 </head>
 
 <body>
-    <h1>"Wishing you a very Happy Birthday Mihir!"</h1>
+    <h1>"Wishing you a very Happy Birthday Rakshi Mausi!"</h1>
 
     <hr />
 
     <div>
-        <img id="mihir" src="./Capture.PNG" alt="Happy Birthday Mihir" />
+        <img id="rakhi" src="./rakhimausi.jpg" alt="Happy Birthday Rakhi Mausi" />
 
     </div>
     <div id="video">
-        <video width="300" height="200" controls>
+        <video width="300" height="300" controls>
             <source src="./Happy-Birthday-Song-Happy-Birthday-To-You-Ji-Status-Video.mp4" type="video/mp4">
         </video>
     </div>
@@ -66,9 +66,9 @@
 
     <div>
         <p id="paragraph">
-            Wishing you a very Happy and Auspicious Birthday Bhai<br>
-            and chearing for your coming years.<br>
-                                     -By Granth<br>
+            Wishing you a very Happy and Auspicious Birthday Rakhi Mausi<br>
+            and chearing for your coming years and Success.<br>
+                                     -By Mummy & Ishu<br>
         </p>
     </div>
 
